--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -1,4 +1,3 @@
-
 @mixin keyframes($name) {
   @-webkit-keyframes #{$name} {
     @content;
@@ -13,7 +12,6 @@
     @content;
   }
 }
-
 
 @mixin keyframeTransform($name, $from, $to) {
   @-moz-keyframes #{$name} {
@@ -56,12 +54,55 @@
   }
 }
 
-
+@mixin keyframePrefixedX($property, $name, $from, $to) {
+  @-moz-keyframes #{$name} {
+    from {
+      -moz-#{$property}: $from;
+      #{$property}: $from;
+    }
+    to {
+      -moz-#{$property}: $to;
+      #{$property}: $to;
+    }
+  }
+  @-webkit-keyframes #{$name} {
+    from {
+      -webkit-#{$property}: $from;
+      #{$property}: $from;
+    }
+    to {
+      -webkit-#{$property}: $to;
+      #{$property}: $to;
+    }
+  }
+  @-o-keyframes #{$name} {
+    from {
+      -o-#{$property}: $from;
+      #{$property}: $from;
+    }
+    to {
+      -o-#{$property}: $to;
+      #{$property}: $to;
+    }
+  }
+  @keyframes #{$name} {
+    from {
+      @if $property == 'filter' {
+        @include filter($from);
+      }
+    }
+    to {
+      @if $property == 'filter' {
+        @include filter($from);
+      }
+    }
+  }
+}
 
 @mixin rotate($amt) {
   @include transform(rotate($amt));
-  //-moz-transform: rotate($amt);
-  //transform: rotate($amt);
+//-moz-transform: rotate($amt);
+//transform: rotate($amt);
 }
 
 
